force-app/main/default/objects/ChatLog__c/ChatLog__c.object-meta.xml
<CustomObject>
    <description>ChatTemplate 오브젝에 있는 템플릿을 이용하여 Knox Chat 보낸 내용에 대한 로그</description>
    <label>ChatLog</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>ChatLog No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChatLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>