force-app/main/default/objects/ChatLog__c/fields/AES256Key__c.field-meta.xml
<CustomField>
    <fullName>AES256Key__c</fullName>
    <description>AES256 암호화에 사용된 Key</description>
    <label>AES256Key</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>