force-app/main/default/objects/ChatLog__c/fields/deviceServerID__c.field-meta.xml
<CustomField>
    <fullName>deviceServerID__c</fullName>
    <description>Knox Chat 전송시 송신자(mysales계정)의 등록된 device ID. 지터빗에도 이 값을 알려줘야한다.</description>
    <label>deviceServerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>