force-app/main/default/objects/ChatLog__c/fields/errorLog__c.field-meta.xml
<CustomField>
    <fullName>errorLog__c</fullName>
    <description>에러발생시 로그</description>
    <label>errorLog</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>