force-app/main/default/objects/ChatLog__c/fields/isSandbox__c.field-meta.xml
<CustomField>
    <fullName>isSandbox__c</fullName>
    <description>채팅전송 서버가 품질서버인지 여부(Y,N)</description>
    <label>isSandbox</label>
    <length>5</length>
    <type>Text</type>
</CustomField>