force-app/main/default/objects/ChatLog__c/fields/isSuccess__c.field-meta.xml
<CustomField>
    <fullName>isSuccess__c</fullName>
    <description>채팅 전송 성공여부(Y,N)</description>
    <label>isSuccess</label>
    <length>5</length>
    <type>Text</type>
</CustomField>