force-app/main/default/objects/ChatLog__c/fields/receiver_ID__c.field-meta.xml
<CustomField>
    <fullName>receiver_ID__c</fullName>
    <description>채팅 수신자 Knox ID</description>
    <label>receiver ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>