force-app/main/default/objects/ChatLog__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <description>ChatTemplate에 있는 Template ID</description>
    <label>Template ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>